--- a/app.json
+++ b/app.json
@@ -8,7 +8,11 @@
     "scheme": "unburden",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.unburden.mentalwellness"
@@ -52,8 +56,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "your-project-id-here"
+        "projectId": "7f140cb5-21fb-40e7-8320-75b12a78cf20"
       }
-    }
+    },
+    "owner": "mahi516"
   }
 }
