--- a/app.json
+++ b/app.json
@@ -9,28 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "platforms": [
-      "ios",
-      "android",
       "web"
     ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.unburden.mentalwellness"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
-        "backgroundColor": "#B19CD9"
-      },
-      "package": "com.unburden.mentalwellness",
-      "permissions": [
-        "android.permission.INTERNET",
-        "android.permission.ACCESS_NETWORK_STATE",
-        "android.permission.VIBRATE",
-        "android.permission.RECEIVE_BOOT_COMPLETED",
-        "android.permission.WAKE_LOCK"
-      ]
-    },
     "web": {
       "bundler": "metro",
       "output": "single",
@@ -38,15 +18,7 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
-      "expo-web-browser",
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/images/icon.png",
-          "color": "#B19CD9"
-        }
-      ]
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
@@ -54,11 +26,7 @@
     "extra": {
       "router": {
         "origin": false
-      },
-      "eas": {
-        "projectId": "7f140cb5-21fb-40e7-8320-75b12a78cf20"
       }
-    },
-    "owner": "mahi516"
+    }
   }
 }
